k8s/01-BACKEND/Deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidercom-backend
  namespace: "2023241041"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lidercom_backend
  template:
    metadata:
      labels:
        app: lidercom_backend
    spec:
      # Bloque para forzar la resolución DNS interna
      hostAliases:
      - ip: "10.42.0.243"
        hostnames:
        - "psql-service"
      containers:
      - name: lidercom-app
        image: arelyxl/lidercom_backend:v1
        ports:
        - containerPort: 5000
