k8s/01-BACKEND/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: "2023241041"
spec:
  type: NodePort
  selector:
    app: lidercom_backend
  ports:
    - port: 80         # Puerto interno para que el Ingress lo vea luego
      targetPort: 5000 # Puerto donde escucha tu App Python
      nodePort: 30005  # Puerto de acceso externo fijo
