k8s/01-BACKEND/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidercom-ingress
  namespace: "2023241041"
  annotations:
    # Esta anotación es clave en la mayoría de clústeres Nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: lidercom.ady-serv.local
    http:
      paths:
      - path: /api # Tu backend vivirá en /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80 # Puerto interno del servicio
